# orcapod-python

./: .gitignore  README.md  orcabridge.ipynb  orcabridge_datajoint.ipynb  pipeline.ipynb  pipeline_creation_playground.ipynb  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run-tests.yml
examples/dataset1/: day1.txt  day2.txt  day3.txt  day4.txt  day6.txt
examples/dataset2/: info_day1.json  info_day2.json  info_day3.json  info_day4.json  info_day5.json
misc/: demo_redis_mocking.py
notebooks/: 01_orcabridge_core_concepts copy.ipynb  01_orcabridge_core_concepts.ipynb  01_orcapod_core_concepts copy.ipynb  02_orcabridge_basic_usage.ipynb  03_orcabridge_qol_features.ipynb  03_orcabridge_tracker.ipynb  04_orcabridge_tracker.ipynb  05_orcabridge_dj_integration.ipynb  06_orcabridge_pipeline_spec.ipynb  orcabridge.ipynb  orcabridge_datajoint.ipynb
notebooks/old_tutorials/: 02_orcapod_basic_usage copy.ipynb
notebooks/tutorials/: 01_introduction_to_orcapod.ipynb  01_orcapod_quick_exploration.ipynb  01_quick_dive_into_orcapod.ipynb  02_parallel_execution_on_ray.ipynb
src/orcabridge/: __init__.py  base.py  file.py  hash.py  hashing.py  hashing_legacy.py  mapper.py  mappers.py  name.py  operation.py  orchestrator.py  pipeline.py  pod.py  requirements.txt  source.py  sources.py  store.py  stream.py  stream_utils.py  streams.py  tag.py  tracker.py  types.py
src/orcabridge/core/: base.py  operators.py  sources.py  streams.py  tracker.py
src/orcabridge/dj/: mapper.py  operation.py  pod.py  source.py  stream.py  tracker.py
src/orcabridge/hashing/: __init__.py  core.py  defaults.py  file_hashers.py  files.py  function.py  function_info_extractors.py  hashing.py  object_hashers.py  protocols.py  semantic_arrow_hasher.py  string_cachers.py  types.py
src/orcabridge/pipeline/: pipeline.py
src/orcabridge/pod/: __init__.py  core.py  pod.py
src/orcabridge/store/: __init__.py  arrow_data_stores.py  core.py  dir_data_store.py  file_ops.py  safe_dir_data_store.py  transfer.py  types.py
src/orcabridge/types/: __init__.py  core.py  default.py  handlers.py  inference.py  registry.py  utils.py
src/orcabridge/utils/: hash.py  name.py  stream_utils.py
src/orcapod/: __init__.py  config.py  errors.py  types.py
src/orcapod/contexts/: __init__.py  core.py  registry.py
src/orcapod/core/: __init__.py  arrow_data_utils.py  base.py  kernels.py  operators.py  pod.py  pod_legacy.py  pods.py  polars_data_utils.py  sources.py  streams.py  system_constants.py  tracker.py  trackers.py
src/orcapod/data/: __init__.py  arrow_data_utils.py  base.py  context.py  datagram_store.py  datagrams.py  kernels.py  old_datagrams.py  operators.py  pods.py  sources.py  streams.py  system_constants.py  trackers.py
src/orcapod/databases/: __init__.py  basic_delta_lake_arrow_database.py  delta_lake_databases.py  file_utils.py
src/orcapod/dj/: mapper.py  operation.py  pod.py  source.py  stream.py  tracker.py
src/orcapod/execution_engines/: __init__.py  ray_execution_engine.py
src/orcapod/hashing/: __init__.py  arrow_hashers.py  arrow_serialization.py  arrow_utils.py  content_hashable.py  content_identifiable.py  core.py  defaults.py  file_hashers.py  function_info_extractors.py  hash_utils.py  legacy_core.py  object_hashers.py  semantic_arrow_hasher.py  semantic_type_hashers.py  string_cachers.py  types.py  versioned_hashers.py  visitors.py
src/orcapod/pipeline/: __init__.py  graph.py  legacy_nodes.py  legacy_pipeline.py  nodes.py  pipeline.py  wrappers.py
src/orcapod/pod/: __init__.py  core.py
src/orcapod/protocols/: data_protocols.py  database_protocols.py  hashing_protocols.py  legacy_data_protocols.py  pipeline_protocols.py  semantic_protocols.py  semantic_types_protocols.py  store_protocols.py  types.py
src/orcapod/semantic_types/: __init__.py  complete_converter.py  complete_converter_test.py  precomputed_converters.py  pydata_utils.py  python_arrow_types.py  schemas.py  semantic_registry.py  semantic_struct_converters.py  struct_converters.py  table_converters.py  type_inference.py  universal_converter.py
src/orcapod/store/: arrow_data_stores.py  core.py  file.py  file_ops.py  optimized_memory_store.py  safe_dir_data_store.py  transfer_data_store.py  types.py
src/orcapod/stores/: __init__.py  arrow_data_stores.py  delta_lake_stores.py  delta_table_arrow_data_store.py  dict_data_stores.py  dict_transfer_data_store.py  file_ops.py  file_utils.py  optimized_memory_store.py  types.py  (+2 more)
src/orcapod_plus/: __init__.py  crypto.py  filestore.py  model.py  util.py
tests/: test_basic_hashing.py
tests/test_hashing/: generate_file_hashes.py  generate_hash_examples.py  generate_pathset_packet_hashes.py  reorganize_files.py  test_basic_composite_hasher.py  test_basic_hashing.py  test_cached_file_hasher.py  test_composite_hasher.py  test_default_file_hasher.py  test_file_hashes.py  test_hash_samples.py  test_hasher_factory.py  test_hasher_parity.py  test_legacy_composite_hasher.py  test_packet_hasher.py  test_path_set_hasher.py  test_pathset_and_packet.py  test_pathset_packet_hashes.py  test_process_structure.py  test_sqlite_cacher.py  test_string_cachers.py
tests/test_semantic_types/: test_path_struct_converter.py  test_pydata_utils.py  test_semantic_registry.py  test_semantic_struct_converters.py  test_universal_converter.py
tests/test_store/: conftest.py  test_dir_data_store.py  test_integration.py  test_noop_data_store.py  test_transfer_data_store.py
tests/test_streams_operations/: conftest.py
tests/test_types/: __init__.py
(+155 files in other folders)
