[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "orcapod"
description = "simple yet powerful pipeline library for building reproducible scientific pipeline"
dynamic = ["version"]
dependencies = [
    "xxhash",
    "networkx",
    "typing_extensions",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "pyarrow>=20.0.0",
    "polars>=1.31.0",
    "beartype>=0.21.0",
    "deltalake>=1.0.2",
    "selection-pipeline",
]
readme = "README.md"
requires-python = ">=3.11.0"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/walkerlab/orcapod-python"

[project.optional-dependencies]
redis = ["redis>=6.2.0"]
ray = ["ray[default]==2.48.0", "ipywidgets>=8.1.7"]
all = ["orcapod[redis]", "orcapod[ray]"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/orcapod/_version.py"

[dependency-groups]
dev = [
    "adlfs>=2024.12.0",
    "boto3>=1.39.11",
    "datajoint>=0.14.6",
    "deltalake>=1.0.2",
    "gcsfs>=2025.7.0",
    "httpie>=3.2.4",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jsonschema>=4.25.0",
    "minio>=7.2.16",
    "mkdocs>=1.6.1",
    "pyarrow-stubs>=20.0.0.20250716",
    "pygraphviz>=1.14",
    "pyiceberg>=0.9.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ray[default]==2.48.0",
    "redis>=6.2.0",
    "ruff>=0.11.11",
    "s3fs>=2025.7.0",
    "tqdm>=4.67.1",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
orcapod = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all", "redis", "ray"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
ray = { features = ["ray"], solve-group = "default" }
redis = { features = ["redis"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.12"

[tool.uv.sources]
selection-pipeline = { git = "https://github.com/enigma-brain/selection_pipeline" } #, rev = "6218290" }
