[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "orcapod"
description = "Intuitive and powerful library for highly reproducible scientific data pipeline"
dynamic = ["version"]
dependencies = [
    "xxhash",
    "networkx",
    "typing_extensions",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "pyarrow>=20.0.0",
    "polars>=1.31.0",
    "beartype>=0.21.0",
    "deltalake>=1.0.2",
    "graphviz>=0.21",
]
readme = "README.md"
requires-python = ">=3.11.0"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/walkerlab/orcapod-python"

[project.optional-dependencies]
redis = ["redis>=6.2.0"]
ray = ["ray[default]==2.48.0", "ipywidgets>=8.1.7"]
all = ["orcapod[redis]", "orcapod[ray]"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/orcapod/_version.py"


[dependency-groups]
dev = [
    "httpie>=3.2.4",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jsonschema>=4.25.0",
    "minio>=7.2.16",
    "pyarrow-stubs>=20.0.0.20250716",
    "pygraphviz>=1.14",
    "pyiceberg>=0.9.1",
    "pyright>=1.1.404",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ray[default]==2.48.0",
    "redis>=6.2.0",
    "ruff>=0.11.11",
    "sphinx>=8.2.3",
    "tqdm>=4.67.1",
]
